add configurations on path matching and data formats

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.password=programacion
 spring.jpa.database=oracle
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=never
+
+#Documentation Maven Path config
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#Time config
+spring.mvc.format.date=dd/MM/yyyy
+spring.mvc.format.time=HH:mm
