--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -14,7 +14,7 @@
 	<name>sp-appoitments-api</name>
 	<description>sp-appoitments-api</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,11 +27,10 @@
 		</dependency>
 
 		<dependency>
-      		<groupId>org.postgresql</groupId>
-      		<artifactId>postgresql</artifactId>
-      		<scope>runtime</scope>
-    	</dependency>
-    	
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
