--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 #Data Access / Data Base config
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=GUSTAVO
-spring.datasource.password=programacion
-spring.jpa.database=oracle
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+#spring.datasource.username=GUSTAVO
+#spring.datasource.password=programacion
+#spring.jpa.database=oracle
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/root
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=never
 
